(executables
 (public_names docker_build_local
               docker_service
               docker_custom
               build_matrix
               auth
               gitlab_auth
               gitlab
               github
               github_app
               rpc_server
               rpc_client)
 (package current_examples)
 (libraries
   capnp-rpc
   capnp-rpc-lwt
   capnp-rpc-net
   capnp-rpc-unix
   cmdliner
   current
   current.term
   current.cache
   current.fs
   current_docker
   current_git
   current_github
   current_gitlab
   current_rpc
   current_web
   dockerfile
   duration
   fmt.tty
   fpath
   logs.fmt
   lwt
   lwt.unix
   prometheus-app.unix
   result
   routes
   uri
   ppx_deriving_yojson.runtime
   yojson)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
