(library
  (public_name current_docker)
  (libraries current current.cache current_git fmt fpath lwt lwt.unix logs dockerfile duration result astring bos ppx_deriving_yojson.runtime)
  (preprocess (per_module
                ((pps ppx_deriving.std ppx_deriving_yojson) pull build run tag push service)
              )))
