; (mdx
;  (deps (package current_git))
;  (package current_git))

; Disbaled for the eio port

; (test
;  (name git_test)
;  (package current_git)
;  (libraries
;    alcotest
;    alcotest-lwt
;    current
;    current_git
;    lwt))

; (mdx
;  (packages current_git)
;  (package current_git))

(executable
 (name test)
 (libraries current_git))
